packages/workflow/tests/__snapshots__/sample-1.dev.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sample-1.dev 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  annotations:
    janitor/ttl: 7d
    field.cattle.io/projectId: '1234'
    kubeworkflow/gitBranch: feature-branch-1
    kubeworkflow/mainNamespace: 'true'
    kapp.k14s.io/exists: ''
  labels:
    application: test-sample-1
    cert: wildcard
  name: test-sample-1-feature-branch-1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/disable-original: ''
spec:
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: ingress-controller
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: monitoring
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: default
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/disable-original: ''
automountServiceAccountToken: false
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: app-configmap
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/disable-original: ''
data:
  NODE_ENV: production
  GRAPHQL_ENDPOINT: http://hasura/v1/graphql
  ACCOUNT_MAIL_SENDER: contact@fabrique.social.gouv.fr
  PRODUCTION: 'false'
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: app-2nd-instance
    application: test-sample-1
  name: app-2nd-instance
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/disable-original: ''
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    component: app-2nd-instance
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: app
    application: test-sample-1
  name: app
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/disable-original: ''
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    component: app
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: hasura
    application: test-sample-1
  name: hasura
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/disable-original: ''
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    component: hasura
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: pgweb
    application: test-sample-1
  name: pgweb
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/disable-original: ''
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    component: pgweb
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: app-2nd-instance
    application: test-sample-1
  name: app-2nd-instance
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/change-group: kube-workflow/test-sample-1-feature-branch-1
    kapp.k14s.io/change-group.app-2nd-instance: kube-workflow/app-2nd-instance.test-sample-1-feature-branch-1
    kapp.k14s.io/disable-original: ''
    kapp.k14s.io/create-strategy: fallback-on-update
    kapp.k14s.io/update-strategy: fallback-on-replace
    kapp.k14s.io/nonce: ''
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app-2nd-instance
  template:
    metadata:
      labels:
        component: app-2nd-instance
        application: test-sample-1
    spec:
      containers:
        - image: >-
            ghcr.io/socialgouv/test-sample-1/app:sha-ffac537e6cbbf934b08745a378932722df287a53
          livenessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: app
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          envFrom:
            - secretRef:
                name: pg-user-feature-branch-1
            - secretRef:
                name: app-sealed-secret
            - configMapRef:
                name: app-configmap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: app
    application: test-sample-1
  name: app
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/change-group: kube-workflow/test-sample-1-feature-branch-1
    kapp.k14s.io/change-group.app: kube-workflow/app.test-sample-1-feature-branch-1
    kapp.k14s.io/disable-original: ''
    kapp.k14s.io/create-strategy: fallback-on-update
    kapp.k14s.io/update-strategy: fallback-on-replace
    kapp.k14s.io/nonce: ''
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
        application: test-sample-1
    spec:
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: upload
        - name: docs
          persistentVolumeClaim:
            claimName: docs
      containers:
        - image: >-
            ghcr.io/socialgouv/test-sample-1/app:sha-ffac537e6cbbf934b08745a378932722df287a53
          livenessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: app
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          envFrom:
            - secretRef:
                name: pg-user-feature-branch-1
            - secretRef:
                name: app-sealed-secret
            - configMapRef:
                name: app-configmap
          volumeMounts:
            - mountPath: /mnt/upload
              name: upload
            - name: docs
              mountPath: /mnt/docs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: hasura
    application: test-sample-1
  name: hasura
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/change-group: kube-workflow/test-sample-1-feature-branch-1
    kapp.k14s.io/change-group.hasura: kube-workflow/hasura.test-sample-1-feature-branch-1
    kapp.k14s.io/disable-original: ''
    kapp.k14s.io/create-strategy: fallback-on-update
    kapp.k14s.io/update-strategy: fallback-on-replace
    kapp.k14s.io/nonce: ''
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hasura
  template:
    metadata:
      labels:
        component: hasura
        application: test-sample-1
    spec:
      containers:
        - image: >-
            ghcr.io/socialgouv/test-sample-1/hasura:sha-ffac537e6cbbf934b08745a378932722df287a53
          livenessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: hasura
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 1280Mi
            requests:
              cpu: 50m
              memory: 128Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          env: []
          envFrom:
            - secretRef:
                name: pg-user-feature-branch-1
            - secretRef:
                name: hasura-sealed-secret
            - configMapRef:
                name: hasura-configmap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: pgweb
    application: test-sample-1
  name: pgweb
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/change-group: kube-workflow/test-sample-1-feature-branch-1
    kapp.k14s.io/change-group.pgweb: kube-workflow/pgweb.test-sample-1-feature-branch-1
    kapp.k14s.io/disable-original: ''
    kapp.k14s.io/create-strategy: fallback-on-update
    kapp.k14s.io/update-strategy: fallback-on-replace
    kapp.k14s.io/nonce: ''
spec:
  replicas: 1
  selector:
    matchLabels:
      component: pgweb
  template:
    metadata:
      labels:
        component: pgweb
        application: test-sample-1
    spec:
      envFrom:
        - secretRef:
            name: pg-user-feature-branch-1
      initContainers:
        - name: wait-for-postgres
          image: ghcr.io/socialgouv/docker/wait-for-postgres:6.56.1
          imagePullPolicy: Always
          env:
            - name: WAIT_FOR_RETRIES
              value: '24'
          envFrom:
            - secretRef:
                name: pg-user-feature-branch-1
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
            requests:
              cpu: 5m
              memory: 16Mi
      containers:
        - image: sosedoff/pgweb:0.11.8
          name: pgweb
          ports:
            - containerPort: 8081
              name: http
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /
              port: http
            periodSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: >
      more_set_headers \\"Content-Security-Policy: default-src 'none'; connect-src
      'self' https://*.gouv.fr; font-src 'self'; img-src 'self'; prefetch-src
      'self' https://*.gouv.fr; script-src 'self' https://*.gouv.fr; frame-src
      'self' https://*.gouv.fr; style-src 'self' 'unsafe-inline'\\";

      more_set_headers \\"X-Frame-Options: deny\\";

      more_set_headers \\"X-XSS-Protection: 1; mode=block\\";

      more_set_headers \\"X-Content-Type-Options: nosniff\\";
    kapp.k14s.io/disable-original: ''
  labels:
    component: app-2nd-instance
    application: test-sample-1
  name: app-2nd-instance
  namespace: test-sample-1-feature-branch-1
spec:
  rules:
    - host: >-
        app-2nd-instance-test-sample-1-feature-branch-1.dev.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: app-2nd-instance
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - >-
          app-2nd-instance-test-sample-1-feature-branch-1.dev.fabrique.social.gouv.fr
      secretName: wildcard-crt
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: >
      more_set_headers \\"Content-Security-Policy: default-src 'none'; connect-src
      'self' https://*.gouv.fr; font-src 'self'; img-src 'self'; prefetch-src
      'self' https://*.gouv.fr; script-src 'self' https://*.gouv.fr; frame-src
      'self' https://*.gouv.fr; style-src 'self' 'unsafe-inline'\\";

      more_set_headers \\"X-Frame-Options: deny\\";

      more_set_headers \\"X-XSS-Protection: 1; mode=block\\";

      more_set_headers \\"X-Content-Type-Options: nosniff\\";
    kapp.k14s.io/disable-original: ''
  labels:
    component: app
    application: test-sample-1
  name: app
  namespace: test-sample-1-feature-branch-1
spec:
  rules:
    - host: test-sample-1-feature-branch-1.dev.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - test-sample-1-feature-branch-1.dev.fabrique.social.gouv.fr
      secretName: wildcard-crt
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kapp.k14s.io/disable-original: ''
  labels:
    component: hasura
    application: test-sample-1
  name: hasura
  namespace: test-sample-1-feature-branch-1
spec:
  rules:
    - host: hasura-test-sample-1-feature-branch-1.dev.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: hasura
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hasura-test-sample-1-feature-branch-1.dev.fabrique.social.gouv.fr
      secretName: wildcard-crt
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kapp.k14s.io/disable-original: ''
  labels:
    component: pgweb
    application: test-sample-1
  name: pgweb
  namespace: test-sample-1-feature-branch-1
spec:
  rules:
    - host: pgweb-test-sample-1-feature-branch-1.dev.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: pgweb
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pgweb-test-sample-1-feature-branch-1.dev.fabrique.social.gouv.fr
      secretName: wildcard-crt
---
apiVersion: kapp.k14s.io/v1alpha1
kind: Config
rebaseRules:
  - path:
      - metadata
      - annotations
      - field.cattle.io/publicEndpoints
    type: copy
    sources:
      - existing
    resourceMatchers:
      - apiVersionKindMatcher:
          apiVersion: apps/v1
          kind: Deployment
metadata:
  namespace: test-sample-1-feature-branch-1
  annotations:
    kapp.k14s.io/disable-original: ''
---
apiVersion: bitnami.com/v1alpha1
kind: SealedSecret
metadata:
  annotations:
    sealedsecrets.bitnami.com/cluster-wide: 'true'
    kapp.k14s.io/disable-original: ''
  name: hasura-sealed-secret
  namespace: test-sample-1-feature-branch-1
spec:
  encryptedData:
    ACCOUNT_EMAIL_SECRET: >-
      AgCYU5zQRAGub/7BY2VzhhQ/Y5EtYeWcgdBrHMfOdhK6DLDbkiYTVBvdIVbvUp/AtHP8V3UwT0zoQfKRiECwdH6oJ92GJ2DQ6svTNJH+x4EyQRJTeRMOrx6y+iVAcFx6I5RbT6SdKkpzGztpY4t4pGt3IOUoKNrJRqshj170LQqsw57NyxzSgZ0HONNsHE+HUK6AijgZXBthAfWqlFyrg6WIBY1f/jyuZ7jvzlotTI9JXXSBz8LryNYG7kth2weHcmlQKiqERPbWGFuGwM77hzgFwixjqnrGJEjWXDfsAmBLk+B9nVht2H54pPYCD+cyRea5NeisxnNCAOw10BJHEX1gxgNzSwQDVfOSINWT1a8R81tm7Dz7j3LyKKT+UH8BREHMlu4qv7+D6PjrRXJXtAMGN6Vsz0Hqvf6vlZou7O4ygcAtirRaSPvsuU1FOg2JvwfheUVZ7StBGhsTBWyQ0jw9UqAXcjtcbqfzeOc8sEEe/5 [...]
    HASURA_GRAPHQL_ADMIN_SECRET: >-
      AgDZX0nGJWSkGYaaTpArKf3L1jsBEzKzsE1qkDIziGJHgVuqdPUhvZwmd6/9yPtkw7ohLh4/yqpQFELURajvHPJy4ZBok5bRhX4eC2tbsEQ+20YmL86KGNUhGSdJ9Ua3m/jV5qEyFnLPBG4cPJL4OjEDNvm/WwJvQfTlXaV4YoZMzlZmPMLFKAQ/8jKoefaIjtTXPq3YSeULlEx94Pv08C5b6o0US4fQwhtBAUOlUmhPEDXo0u4r4yM5w7HGWSCD4Dsb+rHlcRi7ulCCafeaBLITq3BMhzS1eO5XNrLGzh4iDh4rTtv83Y8kFFvb/zXlq/uiPZMoTxaH5eTqYQkCRA3L/2T7hWWiINDB9kbNTIyIZ2uF0W1RLnwgq2VASruNEhxXHYKeQfnhxcqTxGAsTgJgAGhMm17vALEAHt+72L4O822WJw39TB9ozqbnZ0I++ZAmd+kIrZ3Uxp7WfzmM7bKzdqn8L2k0jxHCOKWxChXayO [...]
    HASURA_GRAPHQL_JWT_SECRET: >-
      AgB0yHuBM57mDtyon+1dEC9PTgejHVGA5uOHbdu5P4tH6CuOgpH2cnbXnBaeD+7d52aCNto7a0qD5TN4MtwMQZbJuyXdH8QIsZSvvVmKK0Tf5dgYBnTqDKfJnaH/frlIyrFrZs9aj84uHpZPMw1jP6Rrn/gHLn6oNdvkJS668c5ALSvjJoNoqT2l+2TC0p4fNq9H/q0HaLkL+s5Jfkb9ZqPevo3sBQKJvGEEZmgld0U6S95hiGRVhEGqLR90ZbnYpKpHXk09fxva/UgRGGniK4yAJ7noeUsB2HZU8+X88I0TeX7vx0+WHAqV65eA14e2BegKI55JPeX8rXte/Iy0KRkyBQ8KtD5jkfTsmdeLMchdnmys7pu4CGiRXyAANT8uWzP0QifqfZhG6fHqZiMPhOa8XM2Z8KhFgtWH0m8IG/OUZCllWeRyAFTcupa5Jsq3jn+Y/0N2sgeALvBEmhGSN8jTAWa4cetoF//1kk67BaLFpL [...]
  template:
    metadata:
      annotations:
        sealedsecrets.bitnami.com/cluster-wide: 'true'
      name: hasura-sealed-secret
    type: Opaque
"
`;
